# qhull_via_cpm

./: CMakeLists.txt  main.cpp
